💄 Fix padding bottom having a gap

--- a/src/app/pages/home/intro-section/intro-section.component.scss
+++ b/src/app/pages/home/intro-section/intro-section.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
 
   #intro-section-main {
     display: flex;
